# bsw-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
_shared/: bootstrap.ps1  bootstrap.sh  env-setup.sh  setenv.ps1  setup.py
boards/: lp_mspm0c1104.yaml  lp_mspm0g3507.yaml
boards/lp_mspm0c1104/: mspm0c1104.ccxml  syscfg_lp.c
boards/lp_mspm0g3507/: lp_mspm0g3507.repl  lp_mspm0g3507.resc  syscfg_lp.c
boards/lp_mspm0g3507/models/: mspm0_dma.py  mspm0_timg7.py  mspm0_timg8.py  mspm0_uart.py  mspm0_wwdt.py
bootstrap/: bootstrap.bat  bootstrap.ps1  bootstrap.sh  env-setup.sh  setenv.ps1  setup.py
cmake/: arm-none-eabi.cmake  toolchain-host.cmake
docs/: gpt-cfg-codegen-design.md  iss-1524-debug-architecture.md  macos-bootstrap-checklist.md  renode-timg7-model-gap.md  upstream-issues.md
renode/: lp_mspm0g3507.repl  renode_sil.ld  test_adc_driverlib.robot  test_all_periph.robot  test_button_mode.robot  test_button_mode_driverlib.robot  test_led_blink.robot  test_led_blink_driverlib.robot  test_led_blink_oslite.robot  test_missing_periph.robot  test_pwm_driverlib.robot  test_rte_os_boot.robot  test_rte_os_diag.robot  test_rte_os_wcet.robot  test_timg_periph.robot
src/: app_mode.c  app_mode.h  app_stubs.c  app_tasks.c  app_tasks.h  hal_system_shim.c  led_blink.c  led_blink.h  main.c  main_baremetal.c  main_oslite.c  main_rte_os.c
src/cfg/: Dio_Cfg.c  Dio_Cfg.h  Port_Cfg.c  Port_Cfg.h
src/rte/: Rte_LedBlink.h  Rte_ModeSelector.h  Rte_Ports.h
src/rte/bsw/: Rte_Impl.c
src/rte/static/: Rte_Impl.c
src/swc/: Swc_LedBlink.c  Swc_LedBlink.h  Swc_ModeSelector.c  Swc_ModeSelector.h
tests/: CMakeLists.txt
tests/mock/: Dio.h  Mcu.h  Os.h  Std_Types.h  mock_dio_state.c
tests/sil/: main_fullperiph_test.c  main_missing_periph_test.c  main_periph_test.c  main_timg_test.c
tests/unit/: CMakeLists.txt  test_Swc_LedBlink.c  test_Swc_ModeSelector.c  test_app_mode.c  test_led_blink.c
